<resources>
    <string name="app_name">Nocturnal</string>

    <!-- Navigation -->
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="create">Create</string>
    <string name="profile">Profile</string>
    <string name="back">Back</string>

    <!-- Register activity -->
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of birth (MM/DD/YYYY)</string>
    <string name="register">Register</string>
    <string name="already_have_account">Already have an account? Sign in</string>
    <string name="passwords_dont_match">Passwords do not match</string>

    <!-- Login activity -->
    <string name="username_or_email">Username or email</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Don\'t have an account? Sign up</string>

    <!-- Login and register activity -->
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>

    <!-- Settings activity -->
    <string name="update_username">Update username</string>
    <string name="update_password">Update password</string>
    <string name="update_email">Update email</string>
    <string name="update_bio">Update bio</string>
    <string name="toggle_dark_mode">Toggle dark mode</string>
    <string name="log_out">Log out</string>

    <!-- Fragments -->
    <string name="create_post">Create Post</string>
    <string name="user_profile">User Profile</string>

    <!-- Home fragment -->

    <!-- Create post fragment -->
    <string name="post_textbox_hint">Let your voice be read!</string>
    <string name="add_image">Add Image</string>
    <string name="post">Post</string>

    <!-- User profile fragment -->
    <string name="join_date">Join date</string>

    <!-- Post -->
    <string name="post_date">Post date</string>
    <string name="post_description">Post description</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
</resources>