<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#101619"
    tools:context=".RegisterActivity">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textRegisterTitle"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/et_style"
            android:fontFamily="@font/inter"
            android:hint="@string/username"
            android:inputType="text|textEmailAddress"
            android:padding="16dp"
            android:textColor="@color/text_secondary"
            android:textColorHint="@color/text_secondary"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etUsername"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/et_style"
            android:fontFamily="@font/inter"
            android:hint="@string/email"
            android:inputType="text|textEmailAddress"
            android:padding="16dp"
            android:textColor="@color/text_secondary"
            android:textColorHint="@color/text_secondary"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDateOfBirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etEmail"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/et_style"
            android:fontFamily="@font/inter"
            android:hint="@string/date_of_birth"
            android:inputType="text|textEmailAddress"
            android:padding="16dp"
            android:textColor="@color/text_secondary"
            android:textColorHint="@color/text_secondary"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etDateOfBirth"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/et_style"
            android:fontFamily="@font/inter"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColor="@color/text_secondary"
            android:textColorHint="@color/text_secondary"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPassword"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/et_style"
            android:fontFamily="@font/inter"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColor="@color/text_secondary"
            android:textColorHint="@color/text_secondary"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etConfirmPassword"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="17dp"
            android:backgroundTint="@color/accent_primary"
            android:fontFamily="@font/inter"
            android:padding="8dp"
            android:text="@string/register"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/text_primary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.192"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck"
            tools:layout_editor_absoluteY="280dp" />

        <TextView
            android:id="@+id/textAppTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="47dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/inter"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/text_primary"
            android:textSize="32sp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/textRegisterTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textAppTitle"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/inter"
            android:text="@string/register"
            android:textColor="@color/text_primary"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnRegister"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/dark_theme_primary_bg"
            android:fontFamily="@font/inter"
            android:text="@string/already_have_account"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/text_primary" />

    </RelativeLayout>
</ScrollView>