<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_theme_primary_bg"
    tools:context=".SettingsActivity">

    <!-- Toolbar -->
    <include
        android:id="@+id/toolbarSecondary"
        layout="@layout/toolbar_secondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TableLayout
        android:id="@+id/tableSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbarSecondary"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnUpdateUsername"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/dark_theme_primary_bg"
                android:fontFamily="@font/inter"
                android:minHeight="48dp"
                android:paddingStart="0dp"
                android:paddingTop="16dp"
                android:paddingEnd="0dp"
                android:paddingBottom="16dp"
                android:text="@string/update_username"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnUpdateEmail"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/dark_theme_primary_bg"
                android:fontFamily="@font/inter"
                android:minHeight="48dp"
                android:paddingStart="0dp"
                android:paddingTop="16dp"
                android:paddingEnd="0dp"
                android:paddingBottom="16dp"
                android:text="@string/update_email"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnUpdatePassword"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/dark_theme_primary_bg"
                android:fontFamily="@font/inter"
                android:minHeight="48dp"
                android:paddingStart="0dp"
                android:paddingTop="16dp"
                android:paddingEnd="0dp"
                android:paddingBottom="16dp"
                android:text="@string/update_password"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnUpdateBio"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/dark_theme_primary_bg"
                android:fontFamily="@font/inter"
                android:minHeight="48dp"
                android:paddingStart="0dp"
                android:paddingTop="16dp"
                android:paddingEnd="0dp"
                android:paddingBottom="16dp"
                android:text="@string/update_bio"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/dark_theme_primary_bg"
                android:fontFamily="@font/inter"
                android:minHeight="48dp"
                android:paddingStart="0dp"
                android:paddingTop="16dp"
                android:paddingEnd="0dp"
                android:paddingBottom="16dp"
                android:text="@string/log_out"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="16sp" />
        </TableRow>
    </TableLayout>

</RelativeLayout>